--- a/public/404.html
+++ b/public/404.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script src="https://kit.fontawesome.com/fe9b03a535.js" crossorigin="anonymous"></script>
     <title>Single Page Apps for GitHub Pages</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
